# pi-nano-choc-keyboard

./: .gitignore  README.md
.github/: dependabot.yml
firmware/: Cargo.toml
firmware/.cargo/: config
firmware/app/: Cargo.toml  memory.x
firmware/app/src/: key_map.rs  lib.rs  main.rs  oled_display.rs  panic.rs  rotary_enc.rs  usb.rs
firmware/app/src/debounce/: mod.rs
firmware/app/src/keyboard/: keycode.rs  mod.rs
firmware/left/: Cargo.toml
firmware/left/src/: main.rs  oled_display.rs
firmware/right/: Cargo.toml
firmware/right/src/: main.rs
pcb/: pcb_cut.scad  pcb_edge.dxf  pcb_layout.dxf
pcb/footprints/: RPi_Pico_SMD_TH_flipable.kicad_mod  SW_PG1350_reversible_double.kicad_mod  SW_PG1350_reversible_double_rotatable.kicad_mod  TRRS-PJ-320A.kicad_mod  TRRS-PJ-320A_reversable.kicad_mod
pcb/pinanochoc-keyboard/: fp-lib-table  pinanochoc-keyboard-cache.lib  pinanochoc-keyboard.kicad_pcb  pinanochoc-keyboard.pro
pcb/pinanochoc-keyboard/pinanochoc-gerbers/: pinanochoc-keyboard-B_Cu.gbl  pinanochoc-keyboard-B_Mask.gbs  pinanochoc-keyboard-B_Paste.gbp  pinanochoc-keyboard-B_SilkS.gbo  pinanochoc-keyboard-Edge_Cuts.gm1  pinanochoc-keyboard-F_Cu.gtl  pinanochoc-keyboard-F_Mask.gts  pinanochoc-keyboard-F_Paste.gtp  pinanochoc-keyboard-F_SilkS.gto  pinanochoc-keyboard-NPTH.drl
pcb/pinanococ-keyboard/: pinanococ-keyboard-cache.lib  pinanococ-keyboard-stagger.kicad_pcb  pinanococ-keyboard.kicad_pcb  pinanococ-keyboard.pro  pinanococ-keyboard.sch
pcb/pinanococ-keyboard/pinanochoc-gerbers/: pinanococ-keyboard-B_Cu.gbl  pinanococ-keyboard-B_Mask.gbs  pinanococ-keyboard-B_Paste.gbp  pinanococ-keyboard-B_SilkS.gbo  pinanococ-keyboard-Edge_Cuts.gm1  pinanococ-keyboard-F_Cu.gtl  pinanococ-keyboard-F_Mask.gts  pinanococ-keyboard-F_Paste.gtp  pinanococ-keyboard-F_SilkS.gto  pinanococ-keyboard-NPTH-drl_map.gbr  (+2 more)
(+2 files in other folders)
