[package]
authors = ["Daniel KJ"]
edition = "2021"
name = "app"
version = "0.1.0"

[lib]
name = "app"

# makes `cargo check --all-targets` work
# [[bin]]
# name = "left"
# bench = false
# doctest = false
# test = false

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.2"
ssd1306 = "0.7.0"
rp-pico = { version = "0.2.0" }
rp2040-boot2 = { version = "0.2.0" }
embedded-time = {version = "0.12"}
embedded-graphics = "0.7.1"
embedded-text = {version = "0.5.0", default-features = false }
display-interface = "0.4.1"
arrayvec = { version = "0.7.2", default-features = false }
log = "0.4.14"
itertools = { version = "0.10.1", default-features = false }
bitflags = "1.3"
nb = "1.0"