[package]
authors = ["Daniel KJ"]
edition = "2021"
name = "app"
version = "0.1.0"

[lib]
name = "app"

# makes `cargo check --all-targets` work
# [[bin]]
# name = "left"
# bench = false
# doctest = false
# test = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2", features=["unproven"] }
usb-device= "0.2"
ssd1306 = "0.7"
rp-pico = { version = "0.3" }
rp2040-boot2 = { version = "0.2" }
embedded-time = {version = "0.12"}
embedded-graphics = "0.7.1"
embedded-text = {version = "0.5.0", default-features = false }
display-interface = "0.4.1"
arrayvec = { version = "0.7", default-features = false }
log = "0.4"
bitflags = "1.3"
nb = "1.0"
rand = { version = "0.8", default-features = false, features=["small_rng"] }
usbd-hid-devices = { git = "https://github.com/dlkj/usbd-hid-devices"}
panic-persist = { version = "0.3", features = ["utf8"] }